--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,21 +3,27 @@ name: Update website
 on:
   push:
     branches:
-    - main
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v1
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-    - name: Deploy static site to S3 bucket
-      run: aws s3 sync ./frontend/ s3://dominikkeisz.com --delete --exclude ".*" --size-only
+      - name: Deploy static site to S3 bucket
+        run: aws s3 sync ./frontend/ s3://dominikkeisz.com --delete --exclude ".*" --size-only
+
+      - name: Get CloudFront distribution ID
+        run: echo "dist_id=aws cloudfront list-distributions --query "DistributionList.Items[*].{id:Id,alias:Aliases.Items[*]}[?alias==['dominikkeisz.com']].id" --output text" >> $GITHUB_ENV
+
+      - name: Invalidate CloudFront cache
+        run: aws cloudfront create-invalidation --distribution-id ${{ env.dist_id }} --paths "/*"
