--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,8 @@ jobs:
       - name: Get CloudFront distribution ID
         run: echo "dist_id=aws cloudfront list-distributions --query "DistributionList.Items[*].{id:Id,alias:Aliases.Items[*]}[?alias==['dominikkeisz.com']].id" --output text" >> $GITHUB_ENV
 
+      - name: Print dist ID
+        run: echo ${{ env.dist_id }}
+
       - name: Invalidate CloudFront cache
         run: aws cloudfront create-invalidation --distribution-id ${{ env.dist_id }} --paths "/*"
